Completed and added EDA

--- a/FDP - Data Wrangling.ipynb
+++ b/FDP - Data Wrangling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "498a7945",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8128c2bc",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7479964f",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1500b31d",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "749427b8",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "[443 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9cdd1914",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "183bfe1c",
    "metadata": {},
    "outputs": [
@@ -988,11 +988,32 @@
    "source": [
     "Now that we have cleaned up and gotten our head around the data, removed the rows that would have provided no significant or useful context and then made sure to fill the arrival delays with 0's to indicate when there were no delays present we should be ready to move onto the next step of the data science method. This was arguably a simple approach but with a nice clean data set to start with, not much pre processing work required. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "271b6873",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned dataset saved as 'airline_delay_cleaned.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save cleaned dataset for use in EDA notebook\n",
+    "df_cleaned.to_csv(\"Data/airline_delay_cleaned.csv\", index=False)\n",
+    "\n",
+    "print(\"✅ Cleaned dataset saved as 'airline_delay_cleaned.csv'\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
